--- a/gb/nf5287_10.md
+++ b/gb/nf5287_10.md
@@ -1,1 +1,61 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td VALIGN=TOP><p><a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/liczai2340/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/liczai2340/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4786.md#1">神韵</a></p></td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/21/n1494112.md#1" target="_blank">澳议员:施压保奥运前独立调查评估出炉</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/21/n1494112.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/10/61020220828941-150x120.jpg" align ="left"></a>（大纪元叶紫堪培拉报道）澳洲工党议员卡门-劳伦丝博士在近日的一次澳法轮功团体“联合起来共同制止中共活体摘取法轮功学员器官”的集会上表示，对法轮功的迫害违背了21世纪推崇的价值观，并呼吁国际社会无论中共政府是否承认都应该严肃对待这一指控，向中共政府施压，保证奥运前能够有独立的针对这一严重指控的调查评估出炉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月21日 12:05 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/21/n1493927.md#1" target="_blank">国际呼声高 CIPFG调查团拟赴大陆调查</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/21/n1493927.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/10/610201819251667-150x120.jpg" align ="left"></a>（大纪元记者文华综合报道）10月20日，法轮功受迫害真相联合调查团(CIPFG)发表一项通报，表示不久将组建四大洲独立调查分团，分别前往中国大陆，重点调查活体摘取法轮功学员器官的真相。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月21日 6:42 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/20/n1493155.md#1" target="_blank">BBC回应中共卫生部：贩器官报导准确</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/20/n1493155.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/10/61019235418459-150x120.jpg" align ="left"></a>针对10月10日中共卫生部否认BBC报导中国存在的贩卖器官的情况，并指境外媒体散播“假新闻”。大纪元记者采访了BBC新闻办公室，该办公室发言人回应表示，BBC的报导是“准确的”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月20日 12:52 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/17/n1489310.md#1" target="_blank">日评论家：日政府应 直视中共提出抗议</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/17/n1489310.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/10/610161138201369-150x120.jpg" align ="left"></a>（大纪元记者任子慧东京报道）已经走访了20多个国家，进行实地演讲的、两位加拿大有关中共活体摘取器官的独立调查团成员：前加拿大亚太司司长的大卫 ．乔高（David Kilgour）和著名加拿大人权律师大卫．麦塔斯（David Matas），应日本战略论坛的邀请，14日到达日本。16日上午在东京举行的“令人震惊的中国器官移植内幕”的报告会上，向来自日本各界的百多.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月17日 12:37 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/15/n1488294.md#1" target="_blank">麦塔斯提11项建言 吁台湾支持跨国调查</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/15/n1488294.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/10/610151027381497-150x120.jpg" align ="left"></a>为了避免赴中国大陆移植器官的台湾民众，因误植中共活取法轮功学员器官的悲剧，来访的加拿大检察官的大卫˙麦塔斯（David Matas），对政府提出11项建言。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月15日 11:23 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/15/n1487749.md#1" target="_blank">吕秀莲指活摘器官是恐怖的重大事件</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/15/n1487749.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/10/610141828501665-150x120.jpg" align ="left"></a>台湾副总统吕秀莲13日接见了两位加拿大的独立调查员大卫乔高与大卫麦塔斯，关切中共活摘器官的真相。14日吕秀莲接受媒体采访时指出，根据这份报告很多的器官是从法轮功被逮捕的人里面，活生生被摘取器官来作交易，如果这个是事实的话，是非常恐怖的重大事件。她相信，国人同胞如果深切了解器官的来源是这样的话，大家也不敢接受。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月15日 7:05 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/12/n1485342.md#1" target="_blank">台司改会支持调查法轮功受迫害活动</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/12/n1485342.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/10/610121003421665-150x120.jpg" align ="left"></a>台湾财团法人民间司改法改革基金会上个礼拜宣布支持CIPFG“法轮功受迫害真相联合调查团”(Coalition to Investigate the Persecution of Falun Gong in China,英文简称“CIPFG”)的调查活动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月12日 11:01 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/12/n1485219.md#1" target="_blank">马国人权律师加入活摘器官调查团</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/12/n1485219.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/10/610120757131887-150x120.jpg" align ="left"></a>（大纪元记者李茹岚吉隆坡报导）加拿大独立调查团成员大卫?麦塔斯（David Matas）受邀在马来西亚律师公会举办的公开论坛上发表活摘器官调查报告的内容，在聆听了大卫?麦塔斯报告活摘器官的调查结果以后，马来西亚人权律师云大舜决定加入“法轮功受迫害真相联合调查团”，以帮助搜集更多法轮功被迫害以及活摘器官的证据。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月12日 8:48 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/12/n1485152.md#1" target="_blank">大卫?麦塔斯马国传达活摘器官报告引各界关注</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/12/n1485152.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/10/610120735301887-150x120.jpg" align ="left"></a>（大纪元记者李茹岚吉隆坡报导）加拿大独立调查团成员大卫?麦塔斯（David Matas）受邀在马来西亚律师公会举办的公开论坛上发表活摘器官调查报告的内容，引起各领域的专业人士和非政府组织关注，纷纷表示会仔细了解报告内容，再考虑是否要加入真相调查团制止迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月12日 8:11 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/12/n1484332.md#1" target="_blank">加国政要调查中共盗摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/12/n1484332.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/10/610111450451366-150x120.jpg" align ="left"></a>加拿大前亚太司司长大卫．乔高（David Kilgour）前日（10日）晚上自香港抵达台湾。昨日，他先后在高雄和台北举行的记者会上，指控中共活体摘取法轮功学员器官的恶行，并将加拿大独立调查团在7月公布关于中共非法活体摘取器官的调查报告，公诸于台湾媒体面前。他希望这种不人道的行为能得到各国政府的重视，进而采取措施以保障人权。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月12日 3:49 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/10/n1481940.md#1" target="_blank">加国人权律师新加坡揭中共活摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/10/n1481940.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/10/61009180131993-150x120.jpg" align ="left"></a>（大纪元记者李新新加坡报道）继9月29日加拿大前亚太司司长大卫．乔高(David Kilgour)、加拿大著名人权律师大卫．麦塔斯(David Matas)在美国国会就中共摘取法轮功学员器官的指控举办听证会之后，麦塔斯前往亚洲，将在多个国家就中共活摘法轮功学员器官作演讲。10月9日来到新加坡，当天下午在怡东酒店举行记者会，详细介绍了他与大卫．乔高的调查报告.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月10日 6:57 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/10/n1481925.md#1" target="_blank">乔高香港行 吁关注活摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/10/n1481925.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/10/610091536281366-150x120.jpg" align ="left"></a>继加拿大有关中共活体摘取器官的独立调查团成员大卫．麦塔斯（David Matas）于今年7月中到访香港后，另一名调查团成员——加拿大前亚太司司长、前国会议员大卫．乔高（David Kilgour），也在前晚到达香港，展开他在亚洲为期十多天的巡回旅程。他在昨日的发G会上呼吁香港社会各界继续关注中国大陆法轮功学员被活摘器官的事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月10日 4:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/10/n1481754.md#1" target="_blank">加议员：三退是中国真正的出路</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/10/n1481754.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/10/610091231201887-150x120.jpg" align ="left"></a>加拿大保守党主席雷汉姆?杰福（Rahim Jaffer）和议员罗伯?安德斯对中国逾一千四百万人公开退出中共相关组织发表评论，称中国“真正的出路在中国国内，在那些不再支持野蛮政权的人们。” 杰福对三退人士表示钦佩，并称要尊重和鼓励这种做法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月10日 1:23 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/5/n1477499.md#1" target="_blank">加国家记者俱乐部首次探讨中共活摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/5/n1477499.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/10/610050417431887-150x120.jpg" align ="left"></a>（大纪元记者欣明渥太华报导）十月四日上午，加拿大前亚太司司长，检察官大卫?乔高和著名国际人权律师大卫?麦塔斯在加拿大国家记者俱乐部早餐会上就活体摘取法轮功学员器官调查报告与记者、政要和各方相关问题专家、学者见面并回答他们的问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月05日 5:13 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/5/n1477125.md#1" target="_blank">调查小组在加报告对中共活摘器官调查结果</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/5/n1477125.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/10/610051012281538-150x120.jpg" align ="left"></a>加拿大前国会议员基固尔和国际人权律师马塔斯所组成的加拿大关于中共活摘法轮功学员调查小组，今天在渥太华加拿大国家记者俱乐部就摘取法轮功学员活体器官调查，向与会人士报告并回答问题。基固尔和马塔斯同时呼吁加国政府在中共活摘法轮功学员器官的问题上采取进一步行动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月05日 11:49 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/1/n1472419.md#1" target="_blank">美国会听证中共摘法轮功学员器官指控</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/1/n1472419.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/10/60930113647228-150x120.jpg" align ="left"></a>(大纪元记者亦平华盛顿DC报导) 9月29日中午，美国国会在众议院瑞本大楼首次就中共摘取法轮功学员器官的指控举办听证会，四名证人在听证会上作证。来自美国国会两大党派的议员及议员助理与来自美国政府机构、智库、媒体等一百多人出席了听证会。众议院国际关系委员会资深众议员罗拉巴克敦促美国政府采取进一步行动，结束这场罪恶。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月01日 12:40 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/9/26/n1467602.md#1" target="_blank">欧加政要墨尔本揭中共活摘器官问答(2)</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/9/26/n1467602.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/09/60926063738868-150x120.jpg" align ="left"></a>二零零六年八月廿一日，欧洲议会副主席爱德华．麦克米兰-史考特（Edward McMillan-Scott）和加国关于中共活摘器官独立调查报告的作者之一大卫．乔高（David Kilgour），在澳纽巡回演讲的第三站墨尔本，分别于中午和晚间举行了两场报告会，特邀发言的还有维省自由党议员维克特．彭特（Victor Perton）、前奥运银牌得主简．特纳（Jane.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年09月26日 7:28 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/9/22/n1463256.md#1" target="_blank">联合国会议讨论活摘器官 中共搅局</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/9/22/n1463256.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/09/609220543581695-150x120.jpg" align ="left"></a>（大纪元记者辛慧日内瓦报导）9月20日联合国人权理事会第二次会议，第三天会议讨论了包括酷刑在内的3个议题。联合国“酷刑问题”特派专员诺瓦克教授在他的发言中报告了他去年到中国调查的结果，并做出了“酷刑在中国是普遍存在的”结论。在接下来的第四天的对诺瓦克教授报告的讨论阶段，“活体摘取法轮功学员器官调查报告”的起草人之一，独立调查官之一大卫乔高发言，进一步指证中共.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年09月22日 5:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/9/17/n1456681.md#1" target="_blank">加调查员美国会山揭中共活摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/9/17/n1456681.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/09/609161204591695-150x120.jpg" align ="left"></a>（大纪元记者亦平华盛顿DC报导）参与调查中共活体摘取法轮功学员器官的加拿大外交部前亚太司司长大卫．乔高9月14日下午4点在美国国会大厦举行发布会，向美国国会、媒体记者、医学专家等介绍中共活体摘取法轮功学员器官的独立调查结果及最新进展。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年09月17日 12:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/9/15/n1454861.md#1" target="_blank">欧委会议员为法轮功的最基本权利发声</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/9/15/n1454861.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/09/609142147131030-150x120.jpg" align ="left"></a>米歇尔·俞诺（Michel Hunault)，是一位来自大西洋岸卢瓦尔省的法国国会议员，同时也是欧洲委员会议员团的成员和欧委会下属的人权委员会成员，曾经为新唐人电视节目能在亚洲通过卫星播放一事起了积极的作用。9月12日与途经巴黎的大卫乔高见面，在了解了加拿大前议员大卫乔高和著名人权律师大卫麦塔斯撰写的中共活体摘取法轮功学员器官的调查报告后，向记者讲了他认为欧.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年09月15日 10:43 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/9/15/n1454698.md#1" target="_blank">乔高调查活摘器官报告法国受关注</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/9/15/n1454698.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/09/609141915151123-150x120.jpg" align ="left"></a>加拿大前负责亚太事务的国务秘书大卫?乔高（David kilgour）在欧亚高峰会（ASEM）期间受多国人权组织和国会议员的邀请前往北欧四国介绍其对中共活体摘取法轮功学员器官的调查报告，随后顺路来到法国，与法国的人权组织和国会议员进行接触和交流。9月13日上午，乔高在巴黎召开记者会，回答媒体对其调查报告的提问，以便促进法国社会对中共有关罪行的关注和制裁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年09月15日 8:09 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/23/n1495421.md#1" target="_blank">陈沅森：制止“我们这个星球上前所未有的邪恶”！</a><br></h3>2006年7月14日《大纪元时报?特刊》刊载了《加调查团关于中共活摘法轮功学员器官报告》中译文本（以下简称《加调查团报告》）。三天后，笔者分别询问十位关心时政的朋友“是否通读了《加调查团报告》？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月23日 4:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/21/n1493925.md#1" target="_blank">法轮功受迫害真相联合调查团(CIPFG)拟赴大陆调查通报(一)</a><br></h3>法轮功受迫害真相联合调查团(CIPFG)拟赴大陆调查通报(一)......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月21日 6:32 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/20/n1493251.md#1" target="_blank">杨军解密金属风暴 两大卫揭露活摘器官</a><br></h3>姜：澳大利亚的第9频道前一段时间在黄金时段，向全澳州播放了一段25分钟长的特别节目。这个节目从几个不同方面报导了中共企图从美国和澳洲购买目前世界上最尖端的一种名为“金属风暴”的武器技术。这种武器利用电子化学气点火的技术，可在一秒钟之内发射一万六千发特制的武器弹，而且这项技术可以用于任何武器上。2004年，美国的五角大楼起草了一份《主要军事技术名单》，“金属风.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月20日 2:22 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/17/n1490306.md#1" target="_blank">法广：加拿大独立调查指证中国活摘器官</a><br></h3>法国国际广播电台2006年10月16日在对亚太及大巴黎地区的新闻广播中报导：加拿大独立调查指证中国活摘器官，国际瞩目。中央社台北消息，由大卫?几尔古尔、和国际人权律师大卫?马斯塔组成的加拿大独立调查团根据多种渠道调查的证据推论，在七月间发表中国活体摘取法轮功学员器官独立调查报告。报告认为，中国活体摘取法轮功学员器官的指证是真实的。报告中详细的列出了他们的调查.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月17日 6:42 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/14/n1486876.md#1" target="_blank">法广：大卫?乔高和大卫?麦塔斯在台湾</a><br></h3>......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月14日 7:54 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/13/n1486565.md#1" target="_blank">拯救人权  加国专家吁勿至中国做器官移植</a><br></h3>加拿大“中国活体摘取法轮功学员器官独立调查报告”公布于世后获得许多国家正面回应，作者之一的大卫．麦塔斯(David Mat-as)今天表示，盗卖器官是供需问题，要改变中国行为比较难，不过，可以从国际宣传着手，呼吁大家不要到中国做器官移植手术。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月13日 10:07 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/13/n1486195.md#1" target="_blank">加独立调查 18类证据证实中共活摘器官</a><br></h3>加拿大前外交部亚太司司长、资深国会议员大卫?乔高（David Kilgour）今天指出，经他们两个多月的独立调查，得出中国非法活体摘取器官的指控是真实的，且大部分来自法轮功学员。他希望这种不人道的行为能得到各国政府的重视，并采取措施以保障人权。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月13日 9:23 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/12/n1484740.md#1" target="_blank">乔高拜会台法务部 吁加入抵制中共活摘器官</a><br></h3>前加拿大亚太司长乔高和加拿大国际人权律师麦塔斯所组成关于中共活体摘除法轮功学员器官调查小组，今天拜会法务部，法务部政务次长李进勇表示，乔高和麦塔斯肯定台湾对人体器官捐赠法制健全的表现，并期盼台湾能使民众警觉活摘器官的问题，加入国际抵制中共活摘器官行动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月12日 3:25 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/9/13/n1452979.md#1" target="_blank">前加拿大国会议员将发动抵制2008中国奥运</a><br></h3>投入调查中国法轮功学员活体器官摘除案的前加拿大国会议员基固尔今天在巴黎表示，中国应立即停止违反人权的强制器官移植，如中国不愿表态，他将发动加拿大抵制二零零八年北京奥运，并希望其他国家能跟进。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年09月13日 11:36 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/11/19/n1527102.md#1" target="_blank">洛杉矶时报：中共承认摘取死刑犯器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/11/19/n1527102.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/11/611191631431002-150x120.jpg" align ="left"></a>（大纪元记者孙灿编译）据洛杉矶时报十一月十八日报导，经过多年的否认，中共当局终于承认目前使用的大多移植器官来自于死刑犯并指出，接受器官者主要是不愿在自己国家里长期等待而偿付巨款的外国人．。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年11月19日 7:28 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/11/12/n1519211.md#1" target="_blank">中国器官移植问题多　中市卫生局医界关注</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/11/12/n1519211.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/11/611120831491465-150x120.jpg" align ="left"></a>中国是目前全球器官移植手术数量最多的国家之一，标榜等待器官时间短，能提供年轻、健康的供体。今年三月，中国大陆三位证人曝光中国医院活摘法轮功学员器官出售牟利后，引发各界关切。11月11日台中市中兴大学举办的器官移植座谈会中，台中市卫生局副局长、多位台中市医师针对赴大陆器官移植所隐含医疗安全、伦理与法律的问题进行讨论。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年11月12日 9:27 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/23/n1495281.md#1" target="_blank">上海移植界黑幕 拿正常人作实验致死</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/23/n1495281.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/10/610221408141667.jpg" align ="left"></a>（大纪元记者文华综合报道）近日大陆媒体纷纷报道了由一例医疗诉讼案引发的移植界黑幕。上海同济大学附属东方医院与江苏省镇江市第一人民医院，为“攀登心肺联合移植的医学高峰”，而以正常人作试验品，至少导致一人死亡，一人残废。大陆媒体披露的器官移植领域的学术造假以及漠视人生命的做法，让人惊骇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月23日 2:42 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/15/n1488000.md#1" target="_blank">专家力谏：政府广宣赴中器官移植具风险</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/15/n1488000.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/10/610150041591497-150x120.jpg" align ="left"></a>民进党立委赖清德办公室于14日举办“赴大陆移植器官，是保命？送命？还是取命？台湾移植器官病患权益公听会”，多位与会专家建议，政府相关单位应加强对民众宣导，说明民众赴大陆进行移植器官是有风险的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月15日 1:32 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/9/26/n1467604.md#1" target="_blank">透视“国际移植网络支援中心”网站</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/9/26/n1467604.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/09/60926071028459-150x120.gif" align ="left"></a>“中国国际脏器移植支援中心”是互联网上的专门招揽病人前往中国进行器官移植的一个网页，网页提供中、英、日、俄、韩的多种语言。从内容上，该网站一直是以官方网站的姿态出现。但是经查，该网隶属于一个日本人办的集团公司爱彼希集团。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年09月26日 7:55 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/9/22/n1462902.md#1" target="_blank">“秋决”成中国器官移植医院牟利高峰期</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/9/22/n1462902.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/09/6092201084025-150x120.jpg" align ="left"></a>10月1日中共国庆前夕，记者于近日针对中国大陆器官移植医院在节日、假日前出现大量器官移植手术的情况，陆续对大陆数家医院进行查访，证实了大规模摘取器官的情况仍然在中国进行着。中国大陆执法机构对死刑犯的“秋审秋决”所输出的大量器官供体，己经成为大陆各器官移植医院利用来牟取暴利的时机。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年09月22日 9:08 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/9/22/n1463399.md#1" target="_blank">现代中国的酷刑滥用于法轮功修炼者群体</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/9/22/n1463399.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/09/609220737541695-150x120.jpg" align ="left"></a>联合国人权理事会第二次人权汇报会于二零零六年九月十八日在日内瓦召开。这次会议的主题是联合国各个特派专员的年度报告。“对酷刑问题”特派专员诺瓦克先生九月二十日向大会做年度报告。九月二十一日在特派专员报告之后的讨论阶段，前加拿大外交部亚太司司长大卫?乔高提出了关于中共活体摘取法轮功修炼者的器官，杀人灭迹的罪行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年09月22日 8:32 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/9/7/n1447200.md#1" target="_blank">瑞典政要及媒体关注中共活摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/9/7/n1447200.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/09/609070620261887-150x120.jpg" align ="left"></a>中国盗取被关押法轮功学员器官引起瑞典政要及媒体的关注，9月4瑞典各党派召开听证会并联合倡议制止中共活摘器官并发布“中共必须停止盗取器官”的联合声明。声明要求瑞典政府在欧共体、欧议会、联合国与其他国家合作，迫使中共当局立即开放所有关押法轮功学员的劳教所、拘留所、医院、精神病院，无限制允许国际社会对盗取器官一事进行调查。瑞典国家电视台SVT分别在9月4日和9月8.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年09月11日 8:51 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/9/8/n1448011.md#1" target="_blank">欧加政要墨尔本揭中共活摘器官问答</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/9/8/n1448011.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/09/60908014228868-150x120.jpg" align ="left"></a>继访问堪培拉和悉尼并成功举办报告会之后，8月21日，欧洲议会副主席爱德华．麦克米兰-史考特（Edward McMillan-Scott）和加国活摘器官独立调查报告的作者之一大卫．乔高（David Kilgour）﹐在澳纽巡回演讲的第三站墨尔本，分别于中午和晚间举行了两场报告会，特邀发言的还有维省自由党议员维克特．彭特（Victor Perton）、前奥运银牌.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年09月08日 2:40 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/8/24/n1433156.md#1" target="_blank">乔高:新发现 天津医院85%器官卖往海外</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/8/24/n1433156.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/08/60824064311868-150x120.jpg" align ="left"></a>大纪元记者曾妮布里斯本报导）活摘法轮功学员器官调查报告作者之一乔高（David Kilgour）8月23日在布里斯本指出，他刚刚从一名澳洲医生处了解到，天津东方器官移植中心85%的器官移植手术患者来自海外。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年08月24日 11:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/8/12/n1419317.md#1" target="_blank">复旦大学附属医院6个月摘换6颗心脏</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/8/12/n1419317.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/08/608120451361866-150x120.jpg" align ="left"></a>据明慧网8月12日消息，上海复旦大学党委宣传部网路办公室2002年5月发表文章：《六患者在复旦大学附属中山医院成功“换心”》（见上图）。明慧网是在对中共迫害法轮功学员活体摘取学员器官牟取暴利的调查线索的标题下，登载了这条消息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年08月12日 6:05 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/8/10/n1416763.md#1" target="_blank">【热点互动】器官移植与医学伦理</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/8/10/n1416763.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/08/608091736061461-150x120.jpg" align ="left"></a>主持人：观众朋友们大家好，欢迎您收看《热点互动》节目，我是主持人林晓旭。七月底，世界器官移植大会在美国波士顿召开，随着这几年器官移植手术的技术方面的发展，很多人都会在想：如果我的器官不行了，那么很可能会找个机会换换器官，使自己的生命得到延续。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年08月10日 6:35 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/7/28/n1401861.md#1" target="_blank">中西医生看器官移植 突显道德分歧</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/7/28/n1401861.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/07/607272301471198-150x120.jpg" align ="left"></a>大纪元记者徐竹思波士顿报导)历时5天的首届世界器官移植大会于周四(7月27日)在波士顿闭幕。来自85个国家的6，000多位医生，在这一专题研讨提高器官移植成功率和伦理医德的学术大会期间，耳闻目染的是中国医生涉嫌活体摘取法轮功学员器官的指控，看这一指控，一些与会的中国医生与西方同行表现根本道德分歧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年07月28日 11:50 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/7/28/n1401358.md#1" target="_blank">澳政府关注中共活摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/7/28/n1401358.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/07/607271354561366-150x120.jpg" align ="left"></a>澳洲政府就中共活体摘取法轮功学员器官一事，直接向中共表达了关注。澳洲外长助理里奇（David Ritchie）于7月24至25日在坎培拉举行的人权会议上，就这项指控正式向中共外长助理提出了质问。里奇表示，澳洲在澳中人权闭门对话中，提出了加拿大独立调查团确证中共大量活体摘取法轮功学员器官一事，并且正在着手调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年07月28日 2:54 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/11/18/n1526276.md#1" target="_blank">英媒: 北京承认“器官移植旅游业”存在</a><br></h3>《伦敦每日电讯报》11月17日北京报导，中共已经承认“器官移植旅游业”的存在，即出卖被执行死囚犯的器官给外国人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年11月18日 5:30 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/11/3/n1508314.md#1" target="_blank">日富士电视：在中国脏器移植的危险性</a><br></h3>日本富士电视台在１1月２日早上的特种报道中，报道在中国脏器移植的危险性，随着中国脏器移植的数目的增长，中国脏器提供者的情况受到关注。特别是在二周期间就可以找到器官提供者的事实。涉及到中国利用移植器官来做商业买卖的问题。在日本存在着周旋其中的商人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年11月03日 10:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/11/2/n1507307.md#1" target="_blank">日本电视报导在中国脏器移植的危险性</a><br></h3>日本富士电视台在１1月２日早上的特种报导中，报导了在中国脏器移植的危险性。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年11月02日 3:11 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/11/2/n1507252.md#1" target="_blank">中国医疗品质差 20名马国病人前往求医死亡</a><br></h3>马华公共服务及诉投局拿督张天赐于10月30日与卫生部部长拿督蔡细历召开记者会公布，许多马来西亚肾脏移植病人与癌症患者前往中国求医，因医疗品质不佳，因而客死异乡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年11月02日 2:30 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/3/n1475307.md#1" target="_blank">【热点互动】全球关注中共贩卖器官</a><br></h3>主持人：观众朋友大家好，欢迎收看《热点互动》，我是林云。9月29日美国国会首次就中共活体摘除法轮功学员器官的指控，举办了听证会，而之前英国广播公司BBC在9月27日的晚间新闻中，以头条报导了中国贩卖器官的情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月03日 7:46 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/1/n1472701.md#1" target="_blank">台湾病人到中国进行器官移植受人权人士关切</a><br></h3>专注中国强制摘取死刑犯器官的人权人士，开始关切台湾与香港病人到大陆进行器官移植问题；“国际特赦组织”呼吁，任何人考虑接受中国的器官，应有道德、良心意识。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月01日 10:52 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/10/1/n1472593.md#1" target="_blank">瑞典国家电视台报导中国人体器官出售</a><br></h3>瑞典国家电视电视台在时事新闻节目中播放了长达五分钟的新闻节目，题为“人体器官被出售”。该节目在晚九点黄金时间播放，向全国近六百万观众报导了加拿大著名人权律师麦塔斯先生和前加拿大亚太司司长乔高先生的独立调查报告，以及在中国非法摘除并贩卖法轮功学员人体器官的罪行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年10月01日 5:03 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/9/21/n1461955.md#1" target="_blank">中共摘取死刑犯器官不符国际规范</a><br></h3>美国国会及行政当局中国委员会当地时间20日公布“2006年中国人权报告”中，明确指出中共确实有摘取死刑犯器官移植的情事，而且其流程不符合世界卫生组织的国际规范。中国委员会发表这份报告时，与会学者曾表示，美国国会与行政部门应持续敦促中共改善其人权与法治，尤其应发展一个公平且独立的法庭体系。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年09月21日 4:21 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/8/12/n1419294.md#1" target="_blank">上海近期严厉打压法轮功  百余人被抓捕</a><br></h3>（大纪元记者罗娜综合报道）最近，上海公安、国安、各级政府对法轮功学员的迫害加剧。据悉，原因主要来自三方面：一是今年3月，中共中央发文下令：对法轮功及传播《九评》人士要严厉镇压；二是活体摘除法轮功学员器官一事曝光后，国际反响强烈，中共开始大批绑架法轮功学员以阻止真相在大陆的传播；三是6月份“六国峰会”前夕，上海当局以峰会为借口，加剧迫害法轮功学员。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年08月12日 1:18 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/8/12/n1418961.md#1" target="_blank">无法否认活摘器官事实　中使馆公开承认了什么？</a><br></h3>7月26日，中共驻加拿大大使馆在渥太华召开新闻发布会，声明否认活体摘取法轮功学员器官，并攻击参与独立调查的两名独立调查员和法轮功修炼团体。中使馆的声明回避报告中提出的大量重要事实和证据，篡改报告的内容和原意，断章取义、偷换概念，并再次无理性的煽动对法轮功的仇恨。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年08月12日 5:15 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/8/9/n1415652.md#1" target="_blank">一位学者就活摘法轮功学员器官的声明</a><br></h3>中国政府从1999年7月开始对完全不用暴力的法轮功学员展开有系统的迫害﹐自今已构成自文化大革命以来在中国境内对一个文化团体所进行的人权侵犯为数最大的一次。这是独立于常规司法和上述程序的镇压计划。这样的迫害必须立刻停止。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年08月09日 11:21 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/8/4/n1409815.md#1" target="_blank">《澳洲人》报：“器官移植外交”</a><br></h3>在中国，尴尬的事件时常会侵入到正经的商业发展当中。继第十次澳中人权对话之后，上星期在坎培拉的新闻发布会上，记者很快把问题转向法轮功，成千上万的法轮功学员相继失踪、被拘禁在劳教所、被酷刑折磨，有的被杀害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年08月04日 3:26 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/8/2/n1407112.md#1" target="_blank">时事经纬 第36集－横河：学术研讨、伦理医德和屠杀暴行</a><br></h3>时事经纬 第36集－横河：学术研讨、伦理医德和屠杀暴行......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年08月02日 1:17 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/7/31/n1404555.md#1" target="_blank">比利时电视台：中共被指控贩卖器官</a><br></h3>比利时法语国家电视台RTBF，在2006年7月13日晚间新闻中报道了法轮功学员被中共活摘器官牟利后遭屠杀的消息。电视还报道了当天中午加拿大前国会议员大卫- 乔高在布鲁塞尔举办的新闻发布会，欧洲议会副主席爱德华?麦克米兰-史考特 （Edward McMillan-Scott）和比利时人权律师乔治-亨利?布杰(Goerges-Henri Beauthier)到场.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年07月31日 4:14 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/7/29/n1402976.md#1" target="_blank">全球器官移植市场大买卖</a><br></h3>中国真的从法轮功学员的身上摘取器官吗？摘除后就立即杀害并焚化？前加拿大议会议员大卫-乔高(David Kilgour，音译)，和加拿大人权律师大卫-马提斯(David Matas)承认，他们不能证明中国有或没有为了摘取器官杀害成千个法轮功学员的事实，但是，他们害怕并且相信这是正在发生的事实。所以他们这个月写了一篇报告给“追查国际”(CIPFG)。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年07月29日 11:03 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/6/7/29/n1402758.md#1" target="_blank">世界器官移植协会关注活摘器官指控</a><br></h3>世界器官移植协会(The Transplant Society) 医疗事务主任德耳莫尼科医生( Francis L. Delmonico)表示该协会高度关注目前关于法轮功学员器官被中共活体摘除的指控, 并表示已将他们的关注转达到世界卫生组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2006年07月29日 5:08 AM							</td></tr>
