--- a/gb/nf5287_8.md
+++ b/gb/nf5287_8.md
@@ -1,1 +1,61 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td VALIGN=TOP><p><a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/liczai2340/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/liczai2340/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4786.md#1">神韵</a></p></td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/24/n1688235.md#1" target="_blank">哥大研讨会遭骚扰 煽动性电子邮件曝光</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/24/n1688235.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/04/704231940251093-150x120.jpg" align ="left"></a>(大纪元记者Stephen Summer、金沙报导) 星期五（4月20日）下午在哥伦比亚大学举行的器官讨论会本来可以成为一场普通人权讨论会，但是中国学生学者联谊会（CUCSSA）威胁要使用暴力破坏它。在讨论会举行的前一天晚上9点钟，中国学生学者联谊会发给将近两千名会员一封电子邮件，煽动中国大陆来的学生干扰讨论会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年04月24日 8:26 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/22/n1686638.md#1" target="_blank">加媒采访CIPFG北美团长谈活摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/22/n1686638.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/04/704220255481491-150x120.jpg" align ="left"></a>日前，法轮功受迫害真相联合调查团（CIPFG）北美分团长鲁文?鲍克（Reuven Bulka）先生接受了加拿大电视台的采访（加拿大22台“Talk Ottawa”），在访谈节目中，身为加拿大东部肾脏基金会主席和犹太社区领袖的鲁文?鲍克先生，就中共杀人盗卖器官、中加关系、以及真相调查团的下一步行动等回答了记者和观众的问题，提醒加国人民认清中共已经没有任何道德底.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年04月23日 8:20 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/22/n1686252.md#1" target="_blank">普林斯顿大学内学者纵论中共活摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/22/n1686252.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/04/704211250301695-150x120.jpg" align ="left"></a>（大纪元记者卫泳美国新泽西报导）应美国普林斯顿大学“中国研究协会”的邀请，加拿大独立调查员、国际著名人权律师、“血腥的活摘器官-关于中共活取法轮功学员器官调查报告”作者之一的大卫-麦塔斯(David Matas ) 先生，于4月20日(星期五)下午作为特邀演讲人出席了在该大学内举办的一场有关中共活摘法轮功学员器官和中国人权问题的研讨会。法轮功学员杨景端医师和.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年04月22日 1:38 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/21/n1686033.md#1" target="_blank">哥大师生关注中共活摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/21/n1686033.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/04/704210526221875-150x120.jpg" align ="left"></a>4月20日，纽约哥伦比亚大学法轮大法俱乐部和大赦国际哥伦比亚大学分部举办中共活摘器官论坛，引起哥大师生们关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年04月21日 6:19 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/21/n1685796.md#1" target="_blank">中共活摘法轮功学员器官，震惊密西根二大学</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/21/n1685796.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/04/704210046511491-150x120.jpg" align ="left"></a>（大纪元记者黄安文采访报导）中共活摘法轮功学员器官的罪行在世界曝光一年后，2007年4月18日，密西根的法轮功学员在国际大赦组织的协助下，分别于下午和晚上在安娜堡市(Ann Arbor)的密西根大学和兰星市(Lansing)的密西根州立大学举行了“有计划的屠杀：揭露中共活体摘取法轮功学员器官”的研讨会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年04月21日 1:44 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/21/n1685421.md#1" target="_blank">匹玆堡举行揭露中共活摘器官研讨会</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/21/n1685421.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/04/704201220161887-150x120.jpg" align ="left"></a>明慧网报导，由包括大赦国际(Amnesty International)匹兹堡大学分部、学生反群体灭绝大联盟(STAND)、匹兹堡大学法学院的美国民法自由联合会(ACLU)、解放北朝鲜 (LINK)和卡奈基梅隆大学的校园基督联谊会(Intervarsity Christian Fellowship)、关注亚裔美国人杂志Big Straw等在内的13个学生组织.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年04月21日 1:15 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/15/n1679001.md#1" target="_blank">活摘器官调查员在加国瓦尼尔学院演讲</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/15/n1679001.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/04/704142055581796-150x120.jpg" align ="left"></a>......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年04月15日 9:53 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/5/n1668928.md#1" target="_blank">法兰克福汇报：死刑犯器官不够移植用</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/5/n1668928.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/04/704042016591123-150x120.jpg" align ="left"></a>(大纪元记者王京编译报导)四月二日，德国第二大日报法兰克福汇报（Frankfurter Allgemeine Zeitung）发表文章，报导了中共打压法轮功，并以盗取器官方式谋害法轮功学员的情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年04月05日 9:08 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/2/n1665208.md#1" target="_blank">德国公众聚焦中国“被盗的心”</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/2/n1665208.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/04/704011205051887-150x120.jpg" align ="left"></a>（大纪元记者周仁德国报导）3月30日在德国法兰克福附近举行的“中国人权和经济内幕”的专题研讨会上，加拿大人权律师麦塔斯和前国会议员乔高有关法轮功学员被活摘器官的报告成为关注焦点。会议主办者德国国际人权协会在当天的新闻发布会上以此为重点案例介绍了中共统治下的人权恶化，引发媒体的大规模报导。德国国会议员在专题会闭幕词中强调要在德国公众中进一步将此案公开化。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年04月02日 1:03 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/3/30/n1662338.md#1" target="_blank">麦塔斯揭中共活摘器官 德国民众震惊</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/3/30/n1662338.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/03/703291154251667-150x120.jpg" align ="left"></a>（大纪元综合报道）3月27日，应国际人权组织（IGFM）的邀请，加拿大著名人权律师大卫?麦塔斯出席了在慕尼黑大学举办的“中共掠夺器官及言论自由”研讨会。在翔实证据面前，与会者纷纷谴责中共当局，特别是中共军方活摘法轮功学员器官的罪行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年03月30日 12:53 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/3/29/n1662202.md#1" target="_blank">乔高访英 在议会大厦讲述“血腥收获”</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/3/29/n1662202.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/03/70329081056853-150x120.jpg" align ="left"></a>前加拿大亚太司司长，国会议员大卫?乔高3月26和27日两天应英国前资深外交官瑟?勋爵邀对英国进行了两天的工作访问。他分别在英议会大厦内和外国记者俱乐部举行研讨会和新闻发布会，介绍修订报告《血腥的活摘器官──加拿大关于中共活摘法轮功学员器官调查报告》，幷回答了听众们提出的问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年03月29日 9:03 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/3/28/n1660575.md#1" target="_blank">揭中共活摘新证 麦塔斯展开德国之旅</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/3/28/n1660575.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/03/703280452271887-150x120.jpg" align ="left"></a>揭中共活摘器官新证  大卫．麦塔斯拉开德国之旅序幕——应邀出席慕尼黑研讨会(大纪元黄芩的慕尼黑采访报导)“活体摘取法轮功学员器官牟利的罪行在中国确实存在，中国军方广泛参与并牟取暴利。” 当大卫．麦塔斯的结论回响在慕尼黑大学研讨会会场时，台下的听众都在凝神聚听，震惊写在了他们的脸部。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年03月28日 2:22 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/3/26/n1657563.md#1" target="_blank">血淋淋的器官摘取</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/3/26/n1657563.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/03/703251202381667-150x120.jpg" align ="left"></a>（编者按: 前不久，国际独立调查员大卫﹒麦塔斯和大卫﹒乔高在加拿大国会公布的《血淋淋的器官摘取──关于指控中共摘取法轮功学员器官的调查报告修订版》中文翻译稿面世，这部近30万字的调查报告，用大量证据证实中共活体摘取法轮功学员器官的真实性，在国际社会引起强烈震撼。下面是报告的原文。）......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年03月26日 12:27 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/3/14/n1645777.md#1" target="_blank">皇家医药期刋：法轮功被活取器官可能性</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/3/14/n1645777.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/03/703140237211093-150x120.jpg" align ="left"></a>（大纪元记者罗莎、魏德编译报导）中国日益增加的器官移植案例和获得器官的速度已引起国际社会对其器官来源的高度关注。中国官方对外宣称，器官来自于死刑犯，且事先取得犯人的同意。但也有指控称，中国是有系统性地对犯人特别安排器官摘取手术，供移植和牟利。皇家医药学会期刋（Journal of the Royal Society of Medicine）今年3月份刊载一篇.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年03月14日 3:06 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/3/13/n1644651.md#1" target="_blank">麦塔斯揭中共盗摘器官 震惊费城听众</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/3/13/n1644651.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/03/70313022561731-150x120.jpg" align ="left"></a>(大纪元记者泽霖费城报导)三月十一日(星期天)，加拿大著名人权律师大卫?麦塔斯(David Matas)应费城道德学社(Ethical Society of Philadelphia)及其道义行动委员会(The Ethical Action Committee)的邀请，于下午2点在学社礼堂举行的“中共活体摘取器官与侵犯人权”研讨会上作主题发言，表明强行摘取法.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年03月13日 4:03 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/3/2/n1634601.md#1" target="_blank">新加坡人去中国换器官要三思</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/3/2/n1634601.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/03/703020433531859-150x120.jpg" align ="left"></a> 2006年初，中共活体摘取法轮功学员器官的罪行被曝光后，加拿大独立调查员大卫．麦塔斯和大卫．乔高于6月公布了他们独立调查报告，称这一罪行是“地球上从未有过的邪恶”。今年1月31日，两位调查官在渥太华国会山又公布了中共活体摘取法轮功学员器官的新证据，进一步确证了中共的这一惊天罪恶，而且自去年“活摘器官”的事实被曝光后，表面上中共始终抵赖和回避活体摘除人体器官.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年03月02日 5:30 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/2/18/n1625984.md#1" target="_blank">活摘器官调查团进入中国调查时期已经来临</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/2/18/n1625984.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/02/702181020161695-150x120.jpg" align ="left"></a>（大纪元记者张本真报导）2月16日法轮功受迫害真相联合调查团（CIPFG）亚洲调查分团副团长、日本东京都议会议员土屋敬之在东京表示，有关在中国国内发生着的各种各样的对法轮功的人权迫害，必须进行取证；根据获得的各种信息，从在日本国内议论的阶段，转向实际进入中国国内现场调查的时期已经来临。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年02月18日 11:17 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/2/14/n1622347.md#1" target="_blank">活摘器官调查团成立就绪 数百国际精英</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/2/14/n1622347.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/02/70214141219459-150x120.jpg" align ="left"></a>2007年2月12日，法轮功受迫害真相联合调查团（CIPFG）已经完成在全球四大洲的初步组建工作，四个调查分团已相继成立。他们是： 澳洲调查分团，亚洲调查分团，欧洲调查分团和美国-加拿大调查分团。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年02月15日 1:51 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/2/8/n1617749.md#1" target="_blank">加调查员新证 活摘器官来源多是法轮功学员</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/2/8/n1617749.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/02/702080521341887-150x120.jpg" align ="left"></a>（大纪元记者岳雷综合报导）二零零七年一月三十一日两位加拿大调查员发布的调查报告增补版，加入了更多的直接证据，显示被活体摘取器官的受害者来自法轮功学员。这类活体器官摘取手术，遍及全中国的医院，并且在中国官方去年三月对人体器官移植进行立法规范后仍在继续。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年02月09日 6:39 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/2/3/n1612631.md#1" target="_blank">马来《中国报》报导调查员公布加拿大报告</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/2/3/n1612631.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/02/702022326061123-150x120.jpg" align ="left"></a>（大纪元记者李茹岚吉隆坡报导）马来西亚主流华文报章之一《中国报》二月二日报导，加拿大调查员原加拿大众院人权委员会的主席、国会议员、亚太司司长大卫．乔高和加拿大著名人权律师大卫．麦塔斯于一日公布了《残忍的活摘器官——加拿大关于中共活取法轮功学员器官调查报告》增补版。报导说，中共军方主要是从法轮功学员身上取得器官，为数众多的病人，包括外国病人进行器官移植。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年02月03日 12:25 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/2/2/n1611213.md#1" target="_blank">国际宗教委员会：中国宗教自由状况恶化</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/2/2/n1611213.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/02/702011855261849-150x120.jpg" align ="left"></a>(自由亚洲电台记者申铧报导)美国国际宗教委员会主席盖尔日前表示，中国的宗教自由状况在过去一年多变得越来越差；她呼吁美国政府及其它西方国家敦促中国政府在北京奥运会之前结束对人权的侵犯。一些关注中国宗教自由团体的相关人士用事实支持盖尔的说法。但是中国政府说这是“无端的指责和攻击”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年02月02日 7:51 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/2/1/n1609833.md#1" target="_blank">加拿大报告：中国军方摘取法轮功囚犯器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/2/1/n1609833.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/02/701312048011768-150x120.jpg" align ="left"></a>加拿大今天公布的研究指出，据传中国军方摘取囚犯器官，大规模供外国人移植，这些囚犯大部分是法轮功成员。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年02月01日 9:13 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/22/n1686492.md#1" target="_blank">国际器官捐赠峰会 乔高揭中共活摘罪行</a><br></h3>大纪元记者黄安文采访报导) 为期两天的第四届国际器官捐赠峰会于2007年4月19日在密西格底特律地区的瑞兹卡尔顿饭店举行。会议由韦恩大学医学院和国际器官捐赠协会联合举办。 来自世界各地从事器官捐赠的医生、研究人员、器官捐赠及接受者与社会工作者，共上百人参加了峰会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年04月22日 8:45 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/13/n1677753.md#1" target="_blank">澳真相调查团将公开中共迫害法轮功实例</a><br></h3>法轮功受迫害真相联合调查委员会（CIPFG）主席暨澳洲国家民事委员会（NCC）主席韦斯特摩（Peter Westmore）宣布该联合调查委员会将从5月份开始在澳洲境内就地征集中共迫害法轮功的实例并在进行确认无误后，将事实公诸于世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年04月13日 8:21 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/13/n1676821.md#1" target="_blank">德国国会听证活摘器官指控  吁关注</a><br></h3>(大纪元记者邵燕报导）德国众党派代表出席大卫-麦塔斯和大卫-乔高3月29日在国会举行的关于中共活体摘取器官的指控，德国国会人权委员会呼吁关注指控问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年04月13日 4:47 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/5/n1668845.md#1" target="_blank">麦塔斯与乔高致国际奥委会主席的公开信</a><br></h3>尊敬的国际奥委会主席贾克斯?罗格先生，您好：我们希望您能够和北京的奥委会成员提出关于中国目前的人权问题以停止对那些被剥夺人权的人们的迫害。依据下面的《奥林匹克宪章》，我们真切的希望2008年北京奥运会能够真正的体现奥林匹克精神：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年04月05日 3:52 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/3/16/n1648557.md#1" target="_blank">联合国酷刑专员要求中共解释器官移植疑点</a><br></h3>（大纪元记者羽佳报导）奥地利第二大杂志Profil的记者Robert Misik先生近日采访了联合国人权委员会酷刑专员诺瓦克(Nowak)先生，并于三月初发表了题为“迷失器官移植”(Lost in Transplantation)的文章，报导了麦塔斯和乔高指出中国的器官移植原体来源于被迫害的法轮功学员，联合国人权委员会酷刑专员诺瓦克先生要求中国政府在本周内对.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年03月16日 10:02 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/2/8/n1617035.md#1" target="_blank">心言：中共在默认活摘器官的惊天罪恶</a><br></h3>1月31日，加拿大独立调查员大卫．麦塔斯和大卫．乔高在渥太华国会山公布了中共活体摘取法轮功学员器官的新证据，进一步确证了中共的这一惊天罪恶，而且自去年“活摘器官”的事实被曝光后，中共的罪恶并未停止，只是变得更加隐蔽，表面上中共却始终对事实进行抵赖和回避。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年02月08日 5:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/2/2/n1611290.md#1" target="_blank">加两律师促莫赴中国接受器官移植</a><br></h3>两名加拿大人权律师呼吁各国政府阻止国民前往中国接受器官移植，因为这些器官可能是在未经本人同意的情况下从被处决的犯人身上强行摘取的。但中国官方否认这种说法。 (w2007-02-02-voa3.cfm)......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年02月02日 9:00 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/2/2/n1611147.md#1" target="_blank">心言：看中共如何应对活摘器官新证据</a><br></h3>昨日，加拿大的两位独立调查员大卫．麦塔斯和大卫．乔高在渥太华公布了《残忍的活摘器官——加拿大关于中共活取法轮功学员器官调查报告》的增补版，将原有的十八种论证方法扩充到三十三种，并补充了最新获得的十六项举证和反证，揭示活体摘取法轮功学员器官牟利的罪行在中国存在。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年02月02日 5:09 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/12/13/n2752942.md#1" target="_blank">欧阳非等：“死刑犯”撑不起中国器官移植市场上的蘑菇云(二)</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/12/13/n2752942.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/12/912122158511123-150x120.jpg" align ="left"></a>器官移植遇到的挑战就是人体的免疫排斥反应。免疫排斥是人体的一种免疫机能，它像卫士一样，忠实地守卫着人体安全，决不允许“不明身份”的物质进入体内。不论发现进入人体的是“客人”，还是“ 敌人”，它会尽一切努力“请”它们出去。比如，新肾虽然能够帮助患者解决排水、排毒等大问题，但在免疫排斥反应“心目中”，永远属于“客人”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2009年12月13日 11:21 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/12/12/n2752136.md#1" target="_blank">欧阳非等：“死刑犯”撑不起中国器官移植市场上的蘑菇云(一)</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/12/12/n2752136.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/12/912112114511123-150x120.jpg" align ="left"></a>从1999年到2007年，中国器官移植市场飞速发展。在2003年，中国器官移植数量突然大幅度成倍增长。2003到2006年间在国际上掀起了到中国的器官移植旅游热潮。中国一些医院的器官平均等待时间短到不可思议的1-2周 （国外要等2-3年）。哪里来的这么多器官呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2009年12月13日 2:40 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/12/9/n2748626.md#1" target="_blank">麦塔斯：澳洲民众在逐渐了解事实真相</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/12/9/n2748626.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/12/91209085426868-150x120.jpg" align ="left"></a>（大纪元记者夏文素墨尔本采访报导）加拿大、国际著名人权律师、加拿大国家勋章得主大卫?麦塔斯（David Matas）先生上周四结束了澳洲巡回演讲之旅，墨尔本是其访澳的最后一站。本报记者在其下榻的酒店，对麦塔斯先生作了专访， 他表示，澳洲之行很成功，所接触到的各阶层的人士和几年前相比变化明显，人们在渐渐接受事实真相。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2009年12月09日 4:20 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/12/8/n2747981.md#1" target="_blank">法国国会内《血腥的器官摘取》介绍会</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/12/8/n2747981.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/12/912080402141963-150x120.jpg" align ="left"></a>（大纪元记者王泓法国报导）前加拿大国务秘书、议员大卫?乔高（David Kilgour）应法轮功受迫害真相联合调查团和法国国会议员、前国务秘书弗兰索瓦兹?奥丝塔丽埃女士（Fran?oise Hostalier）邀请12月3日在法国国会联合举办《血腥的器官摘取》新书介绍会。乔高在会上呼吁法国议员能像加拿大议员一样在议会成立法轮功之友协会，帮助制止中共对法轮功修.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2009年12月08日 4:59 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/11/10/n2717871.md#1" target="_blank">甄钧：解放军总后勤部是活摘器官核心机构</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/11/10/n2717871.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/11/911100726212271-150x120.jpg" align ="left"></a>一九九九年江泽民在发动迫害法轮功时，手中握有军权，虽然军队在表面上没有放一枪一炮，看似没有参与迫害，但军队却给江泽民的一意孤行的迫害起了客观上武装护航的作用。军队在迫害法轮功中起的作用却非常显着，而且因为中共对军队的严密控制和军队本身的特殊性而不为人知，其中主要的一部分就是以总后勤部为首的活摘法轮功学员器官谋利事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2009年11月16日 11:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/9/17/n2659349.md#1" target="_blank">器官何来 首度有医生因杀人摘器官被拘</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/9/17/n2659349.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/09/90916144615794-150x120.jpg" align ="left"></a>十一前夕，大陆媒体频频报导的一则杀人盗器官案，突然遭中宣部下令禁止报导。一直被外界指摘的中共活摘器官事件，再次引起外界关注，案中首次有医生被涉案调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2009年09月17日 3:41 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/3/30/n2479217.md#1" target="_blank">美器官移植伦理会 著名专家吁停止培训中国医生</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/3/30/n2479217.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/03/903292359471550-150x120.jpg" align ="left"></a>(大纪元记者张乐瑶美国德州休斯顿报导)3月28日，由美国德克萨斯州休斯顿市圣?托马斯大学主办的美国器官移植与伦理会议在该大学举行。来自加拿大，菲律宾，美国加州、密西根州、西弗吉尼亚州等地的专家学者出席了会议，探讨有关器官移植伦理方面的问题。来自加拿大的国际著名人权律师大卫．麦塔斯先生(David Matas)应邀参加，他在公开演讲中讲述了中共迫害法轮功学员.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2009年03月30日 12:34 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/3/29/n2477996.md#1" target="_blank">中共死刑车 强摘死囚器官变卖</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/3/29/n2477996.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/03/903281628541119-150x120.jpg" align ="left"></a>中国政府已自三年前开始试验用高科技死刑执行车来执行死刑，但在举办北京奥运前则刻意保持低调以免引发国际争议，据英国每日邮报报导指称，这种令人联想起德国纳粹政权使用毒气卡车来屠杀罪犯、精神病患与犹太人的“死亡之车”已遍布中国各地。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2009年03月29日 5:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/3/22/n2471134.md#1" target="_blank">华裔妇女赴大陆换肾 被骗百万难讨说法</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/3/22/n2471134.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/03/903221034521528-150x120.jpg" align ="left"></a>新加坡籍的林秀月女士在北京解放军三零七医院做换肾手术期间，被主治医生和“医托”联手骗走了100多万元人民币。当事人及家属向军委有关部门、全国政法委、公安、检察、北京市委等多方反映，要求调查及严惩，但部队、地方司法机关的“躲猫猫”不但不能为受害人讨回公道，而且对犯罪嫌疑人只玩了一次抓放游戏。受害人悲愤地表示：“难道中国真的没有正义了吗。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2009年03月22日 7:15 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/3/13/n2460728.md#1" target="_blank">强摘器官焚尸灭迹 国际曝光川当局恐惧</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/3/13/n2460728.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/03/903121538171366-150x120.jpg" align ="left"></a>（大纪元记者顾晓华采访报导）重庆市江津区66岁的法轮功学员江锡清遭到当局迫害致死的消息在海内外媒体曝光后，当局非常恐惧，近期大肆对老人的子女进行骚扰，非法抄家。目前子女们不但承受着失去父亲的巨大伤痛，而且还生活在当局的高压恐怖中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2009年03月13日 4:33 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/8/7/7/n2182433.md#1" target="_blank">回应联合国要求交代器官来源 中共撒谎</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/8/7/7/n2182433.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2008/07/80707012552459-150x120.gif" align ="left"></a>不久前在联合国发布的联合国2008年度调查报告中，联合国宗教信仰自由特派专员阿斯玛．加哈吉尔（Asma Jahangir）和联合国酷刑问题特派专员曼弗瑞德．诺瓦克（Manfred Nowak）针对中共活体摘取法轮功学员器官的指控，要求中共拿出从2000年开始中国器官移植数目猛增所用的器官来源，并解释2000年-2005年器官移植的巨大数量和较少可知供体来源间.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2008年07月07日 2:30 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/8/4/11/n2078803.md#1" target="_blank">济南小伙捐角膜无门 器官来自捐献有诈</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/8/4/11/n2078803.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2008/04/80411075010459-150x120.jpg" align ="left"></a>（大纪元记者施宇综合报导）一篇2007年4月4日《齐鲁晚报》的报导，最近在网上流传，并引起各界的关注。该报导说，一位在山东济南打工的小伙儿在确诊肾衰后，决定捐献自己的角膜。结果找遍山东省几家大的专科医院，竟没有任何一个医院“有资格”接受捐献。济南市中心医院眼科中心一位负责人更表示，该院眼科临床用的眼角膜来自社会捐献的至今尚无一例。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2008年04月11日 8:36 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/8/1/3/n1964198.md#1" target="_blank">外电：澳洲人海外移植器官大多来自中国</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/8/1/3/n1964198.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2008/01/801030937251093-150x120.jpg" align ="left"></a>(大纪元记者林节编译报导) 专家指出，某些罹患重病并急需器官移植的澳洲人前往中国大陆去买人体器官，而这些器官来自当地贫困穷人或死刑犯。由于澳洲一直以来在器官捐赠来源方面贫乏，因而加速推动了这项波潮，因为在澳洲当地，买卖人体器官是非法行为。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2008年01月03日 10:28 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/11/17/n1904419.md#1" target="_blank">德检察院调查非法器官交易</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/11/17/n1904419.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/11/711161642141887-150x120.jpg" align ="left"></a>（大纪元记者田宇德国报导）瓦尔特（D.Walter）身患严重的心脏病。自从知道了自己只有通过“换心”才有机会活下去之后，他就开始了忧心忡忡的漫长等待。他等着医生哪天能够通知他，终于为他找到了一个合适的供体，同时也随时等待着死神的降临。他知道，后者比前者先到来的机遇要大的多，因为全德国目前有1万2千名病人在等着做器官移植手术。由于缺乏足够的供体，平均每天有三名.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年11月17日 5:33 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/10/29/n1883531.md#1" target="_blank">中国医师赴台中介器官移植</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/10/29/n1883531.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/10/710290430571779-150x120.jpg" align ="left"></a>记者吴涔溪台北报导)针对中国医师来台招募民众进行器官移植遭媒体披露后，台湾行政院大陆委员会目前已锁定多位大陆医师，长期穿梭两岸、非法招揽民众赴中进行器官移植，陆委会连同卫生署近日内将发函给这些医师，并向中国有关主管机关报备，禁止大陆医师以学术之名，来台揽客赴中移植器官。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年10月29日 4:57 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/10/24/n1877528.md#1" target="_blank">中国医师违法在台湾揽客换肝</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/10/24/n1877528.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/10/710231934421770.jpg" align ="left"></a>中国医师来台违法揽客换肝中国天津第一中心医院器官移植中心主任朱志军今年3月来台“交流”时，在下榻的台北福华饭店大厅为准备赴中换肝病友审查病历资料进行术前评估，已违反台湾医师法与人体器官移植条例。（取自北方网)赴中国换肝病友的笔记本上，记载着天津第一中心医院朱志军等医师的红包行情。（自由时报记者方宾照摄)中国天津第一中心医院器官移植中心主任朱志军今年3月来台“.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年10月24日 8:33 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/9/2/n2644150.md#1" target="_blank">中国发生医生涉案的“杀人盗器官”案</a><br></h3>没有人知道他叫什么名字，也不知道他从哪里来。今年6月以前，他已经在威舍流浪了七八年。威舍是贵州省黔西南州兴义市西北角的一个山区小镇，地处黔、滇、桂三省区结合部，距离兴义市区32公里。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2009年09月02日 2:15 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/8/28/n2639204.md#1" target="_blank">王华：请不要假装不知道</a><br></h3>2009年8月25日，在上海召开的全国人体器官捐献工作会议上，卫生部副部长黄洁夫、中华医学会器官移植学会副主任委员陈忠华等给出了下面数据：中国每年移植手术量11000多，仅次于美国，器官来源65%来自死刑犯，公民死后捐赠的不到30例，剩下的40%来自活体器官移植。按中国《人体器官移植条例》，活体捐赠只限于亲属和有亲情联系的人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2009年08月28日 9:06 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/8/28/n2638156.md#1" target="_blank">德人权组织  将器官贩卖负责人送上法庭</a><br></h3>8月25日的《人民日报》海外版披露了中国大陆65%的器官移植手术的器官来自死刑犯。中国卫生部副部长黄洁夫表示，死刑犯“肯定不应该是器官移植所需器官的来源渠道”。这是中国政府第一次承认窃取死刑犯的器官。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2009年08月28日 4:43 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/4/30/n2511800.md#1" target="_blank">移植大国半遮半露的实像</a><br></h3>日本大纪元张本真最近在日本产经新闻上发表的一篇书评中，介绍了加拿大国际著名人权律师大卫?麦塔斯和他完成的有关指控中共活体摘取法轮功学员器官的独立调查报告。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2009年04月30日 5:30 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/4/14/n2494445.md#1" target="_blank">玉清心：警惕中共扩大内需的器官移植生意</a><br></h3>写下了“清明时节你该为谁哭泣？”（以下简称“清明”）一文后，接到不少朋友的反馈，说读了这篇文章后心里不好受，而其中揭露的真相是中共活摘法轮功学员器官的又一个例证。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2009年04月14日 9:42 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/4/10/n2491203.md#1" target="_blank">玉清心：清明时节你该为谁哭泣？</a><br></h3>“清明时节雨纷纷”是中国传统节气的气象，今年欧洲这边是少有的艳阳天。赶上了周末，满街的餐馆、酒吧、咖啡屋外都坐满了用餐、品饮的顾客。沐浴在久违了的和煦阳光里，看着形形色色的街头过客，这是食客们在露天里“泡吧”的一份享受。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2009年04月10日 7:13 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/9/3/30/n2479592.md#1" target="_blank">唐恩：谈中共死刑车与活摘器官</a><br></h3>据英国《每日邮报》报导，中共自三年前开始用高科技死刑执行车来执行死刑，但在举办北京奥运前刻意保持低调以免引发国际争议，这种已遍布中国各地的“死亡之车”，外型与一般的警用巡逻车无异，但车厢的内部配备像是医院的开刀房，其恐怖肃杀气氛，仿佛重现德国纳粹政权使用毒气卡车来屠杀罪犯、精神病患与犹太人的历史。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2009年03月30日 8:20 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/8/4/4/n2069767.md#1" target="_blank">张宇洁：卫生部副部长与中共互相利用</a><br></h3>一年多来，中国大陆卫生部副部长黄洁夫频繁出镜，大谈伦理道德，就大陆器官移植状况、新条例、新法律不断发表言论，其中也有批评移植乱象之辞。其实，黄洁夫作为器官移植医生，在中共把持地下活体器官库的背景下并没能洁身自好，所用器官的来源不明不白；从2005年底开始，作为中共卫生部副部长的黄洁夫开始了有系统的撒谎，掩盖活摘囚犯器官、活摘法轮功学员器官和法轮功集中营长期存.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2008年04月04日 12:23 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/8/2/17/n2013820.md#1" target="_blank">福州一患者医院去世　眼角膜不翼而飞</a><br></h3>“福州晚报”报导，三十四岁的福建福清人张日珠在一件交通事故中受伤，被送到医院治疗无效去世，但奇怪的是她的眼角膜竟然不翼而飞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2008年02月18日 1:05 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/8/2/17/n2013449.md#1" target="_blank">女子车祸送院 死后眼角膜不翼而飞</a><br></h3>一名福建籍女子因为车祸被送进当地一家医院，4天后伤重不治，数日后，死者家属在医院太平间发现死者的眼角膜不翼而飞。经法医鉴定，确认死者眼角膜组织丢失，警方随后以侮辱尸体罪立案调查，到目前为止仍没有调查结果。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2008年02月17日 10:12 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/11/17/n1904776.md#1" target="_blank">外电：印度和中国包藏祸心的器官买卖</a><br></h3>(大纪元记者安琪报导) 旧金山纪事报(San Francisco Chronicle)近日在一篇标题为“美国吸血鬼”(American vampire)的报导中，揭露了在印度和中国高利润器官买卖移植旅游帘幕下暗藏的黑幕：急欲摆脱贫困的印度海啸难民在美丽谎言的诱惑下，遭到欺蒙贱卖器官；中国生意正隆的器官移植手术中遭人诟病的来源不明之器官。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年11月17日 3:12 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/11/9/n1895692.md#1" target="_blank">武警广东总院：器官供体分配系统仍运作</a><br></h3>随着知情人士和媒体陆续曝光中共将法轮功学员、良心犯、政治犯等人士处死摘取器官作为移植手术的供源，国际谴责不断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年11月09日 5:01 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/10/29/n1883741.md#1" target="_blank">天津医师来台揽客 中国移植现况露底</a><br></h3>天津第一中心医院肝移植主任朱志军，藉两岸医学研讨会，来台接受患者肝移植术前评估，消息批露后，这家中国最大器官移植中心是否仍有大量来路不明的供体进行移植，中共5月1日公布人体器官移植条例是否只是奥运前的人权遮羞布，引起国际瞩目。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年10月30日 1:19 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/7/10/18/n1871351.md#1" target="_blank">日男子中国买卖人体器官被捕</a><br></h3>日本总领事馆透露，日本男子长濑博之于9月11日涉嫌在华非法买卖人体器官在上海被捕，这是首次有日本人因这类案件而被捕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2007年10月18日 8:26 AM							</td></tr>
